--- a/package.json
+++ b/package.json
@@ -1,51 +1,46 @@
 {
-  "name": "nci-ansible-ui",
-  "version": "1.1.2",
-  "description": "Simple web interface for run ansible playbooks",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-less": "lessc app/styles/index.less > static/css/index.css",
-    "build-js": "browserify  app/app.js -t ./transforms/jade.js | uglifyjs -mc > static/js/app.build.js",
-    "watch-less": "chokidar --initial --silent app/styles/**/*.less app/styles/index.less -c 'npm run build-less'",
-    "watch-js": "watchify app/app.js -t ./transforms/jade.js -o static/js/app.build.js -dv",
-    "_init-dev": "touch static/js/app.build.js && touch static/css/index.css",
-    "dev": "test -z $NODE_ENV && export NODE_ENV=development; nrun _init-dev && parallelshell 'nrun build-fonts' 'nrun watch-less' 'nrun watch-js' 'nrun build-html'",
-    "sync": "npm install && npm prune",
-    "lint": "jshint ./",
-    "build-fonts": "mkdir -p static/fonts/ && parallelshell 'cp ./node_modules/bootstrap/fonts/* ./static/fonts/' 'cp ./node_modules/font-awesome/fonts/* ./static/fonts/' 'cp ./node_modules/scmicons/fonts/* ./static/fonts/'",
-    "build-clean": "rm static/index.html",
-    "build-html": "jade views/index.jade --obj \"{'env': '$NODE_ENV'}\" -o static/",
-    "build": "test -z $NODE_ENV && export NODE_ENV=production; nrun build-fonts && nrun build-js && nrun build-less && nrun build-html"
+  "_from": "nci-ansible-ui",
+  "_id": "nci-ansible-ui@1.1.2",
+  "_inBundle": false,
+  "_integrity": "sha512-hLuXfZlUqIv1YlW6/PQ3YeycQBVt0q0YKVxauz/cyk6JnXTUfpgTodpv60YD6TkPjtOuqMBU6DVnToXh9dfP9w==",
+  "_location": "/nci-ansible-ui",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "nci-ansible-ui",
+    "name": "nci-ansible-ui",
+    "escapedName": "nci-ansible-ui",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/node-ci/nci-ansible-ui.git"
-  },
-  "keywords": [
-    "nciplugin",
-    "ui",
-    "interface",
-    "ansible",
-    "playbook"
+  "_requiredBy": [
+    "#USER",
+    "/"
   ],
+  "_resolved": "https://registry.npmjs.org/nci-ansible-ui/-/nci-ansible-ui-1.1.2.tgz",
+  "_shasum": "3be0593adc2f1d2d7ac393dfe04a2dfca77a9bc7",
+  "_spec": "nci-ansible-ui",
+  "_where": "/Users/avishay/Projects/demo",
+  "bugs": {
+    "url": "https://github.com/node-ci/nci-ansible-ui/issues"
+  },
+  "bundleDependencies": false,
   "contributors": [
     {
       "name": "Oleg Korobenko",
       "email": "oleg.korobenko@gmail.com"
     }
   ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/node-ci/nci-ansible-ui/issues"
-  },
-  "homepage": "https://github.com/node-ci/nci-ansible-ui",
   "dependencies": {
     "data.io": "0.3.0",
     "socket.io": "1.7.2",
     "twostep": "0.4.2",
     "underscore": "1.8.3"
   },
+  "deprecated": false,
+  "description": "Simple web interface for run ansible playbooks",
   "devDependencies": {
     "ansi_up": "1.3.0",
     "bootstrap": "3.3.4",
@@ -70,7 +65,38 @@
     "uglifyjs": "2.4.10",
     "watchify": "3.6.1"
   },
+  "homepage": "https://github.com/node-ci/nci-ansible-ui",
+  "keywords": [
+    "nciplugin",
+    "ui",
+    "interface",
+    "ansible",
+    "playbook"
+  ],
+  "license": "MIT",
+  "main": "app.js",
+  "name": "nci-ansible-ui",
   "peerDependencies": {
     "nci": ">=1.0.1 <1.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/node-ci/nci-ansible-ui.git"
+  },
+  "scripts": {
+    "_init-dev": "touch static/js/app.build.js && touch static/css/index.css",
+    "build": "test -z $NODE_ENV && export NODE_ENV=production; nrun build-fonts && nrun build-js && nrun build-less && nrun build-html",
+    "build-clean": "rm static/index.html",
+    "build-fonts": "mkdir -p static/fonts/ && parallelshell 'cp ./node_modules/bootstrap/fonts/* ./static/fonts/' 'cp ./node_modules/font-awesome/fonts/* ./static/fonts/' 'cp ./node_modules/scmicons/fonts/* ./static/fonts/'",
+    "build-html": "jade views/index.jade --obj \"{'env': '$NODE_ENV'}\" -o static/",
+    "build-js": "browserify  app/app.js -t ./transforms/jade.js | uglifyjs -mc > static/js/app.build.js",
+    "build-less": "lessc app/styles/index.less > static/css/index.css",
+    "dev": "test -z $NODE_ENV && export NODE_ENV=development; nrun _init-dev && parallelshell 'nrun build-fonts' 'nrun watch-less' 'nrun watch-js' 'nrun build-html'",
+    "lint": "jshint ./",
+    "sync": "npm install && npm prune",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch-js": "watchify app/app.js -t ./transforms/jade.js -o static/js/app.build.js -dv",
+    "watch-less": "chokidar --initial --silent app/styles/**/*.less app/styles/index.less -c 'npm run build-less'"
+  },
+  "version": "1.1.2"
 }
